--- a/index.html
+++ b/index.html
@@ -18,28 +18,30 @@
                 <img src="img/logo.png" alt="trillo logo" class="logo">
 
                 <form action="#" class="search">
-                    <input type="search" class="searh__input" placeholder="Search anything..">
+                    <input type="search" class="search__input" placeholder="Search anything..">
                     <button class="search__button">
                     <i class="fas fa-search"></i>
                     </button>
                 </form>
+
+                <div class="user-nav">
+                    <div class="user-nav__icon">
+                        <i class="fas fa-bookmark"></i>
+                        <span class="user-nav__notifi">7</span>
+                    </div>
+                    <div class="user-nav__box">
+                        <i class="fas fa-envelope"></i>
+                        <span class="user-nav__notifi">13</span>
+                    </div>
+                    <div class="user-nav__user">
+                        <img src="img/ruslan.jpg" alt="Ruslan Bairamovi photo" class="user-nav__user-photo">
+                        <span class="user-nav__user-name">Ruslan</span>
+                    </div>
+            </div>
             </div>
             <div class="content">
                 <nav class="sidebar">   
-                    <div class="user-nav">
-                        <div class="user-nav__icon">
-                            <i class="fas fa-bookmark"></i>
-                            <span class="user-nav__notifi">7</span>
-                        </div>
-                        <div class="user-nav__box">
-                            <i class="fas fa-envelope"></i>
-                            <span class="user-nav__notifi">13</span>
-                        </div>
-                        <div class="user-nav__user">
-                            <img src="img/ruslan.jpg" alt="Ruslan Bairamovi photo" class="user-nav__user-photo">
-                            <span class="user-nav__user-name">Ruslan</span>
-                        </div>
-                    </div>
+
                 </nav>
                 <main class="hotel-view">
                     hotel view
