--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <i class="fas fa-bookmark"></i>
                         <span class="user-nav__notifi">7</span>
                     </div>
-                    <div class="user-nav__box">
+                    <div class="user-nav__icon">
                         <i class="fas fa-envelope"></i>
                         <span class="user-nav__notifi">13</span>
                     </div>
