--- a/index.html
+++ b/index.html
@@ -41,7 +41,37 @@
             </div>
             <div class="content">
                 <nav class="sidebar">   
-
+                    <ul class="side-nav">
+                            <li class="side-nav__item">
+                                <a href="#" class="side-nav__link">
+                                    <span class="side-nav__link-icon">
+                                        <i class="fas fa-hotel"></i> Hotel
+                                    </span>
+                                </a>
+                            </li>
+                            <li class="side-nav__item">
+                                <a href="#" class="side-nav__link">
+                                    <span class="side-nav__link-icon">
+                                            <i class="fas fa-plane-departure"></i> Flight
+                                    </span>
+                                </a>
+                            </li>
+                            <li class="side-nav__item">
+                                <a href="#" class="side-nav__link">
+                                    <span class="side-nav__link-icon">
+                                            <i class="fas fa-car"></i> Car rental
+                                    </span>
+                                </a>
+                            </li>
+                            <li class="side-nav__item">
+                                <a href="#" class="side-nav__link">
+                                    <span class="side-nav__link-icon">
+                                        <i class="fas fa-map-marked-alt"></i> Tours
+                                    </span>
+                                </a>
+                            </li>
+                    
+                    </ul>
                 </nav>
                 <main class="hotel-view">
                     hotel view
