--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="content">
                 <nav class="sidebar">   
                     <ul class="side-nav">
-                            <li class="side-nav__item">
+                            <li class="side-nav__item side-nav__item-active">
                                 <a href="#" class="side-nav__link">
                                     <span class="side-nav__link-icon">
                                         <i class="fas fa-hotel"></i> Hotel
@@ -72,6 +72,9 @@
                             </li>
                     
                     </ul>
+                    <div class="legal">
+                        &copy; 2019 by Ruslan Bairamovi. All rights reserved.
+                    </div>
                 </nav>
                 <main class="hotel-view">
                     hotel view
