adding hotel overview sec.

--- a/index.html
+++ b/index.html
@@ -77,7 +77,37 @@
                     </div>
                 </nav>
                 <main class="hotel-view">
-                    hotel view
+                    <div class="gallery">
+                        <figure class="gallery__item">
+                            <img src="img/hotel-1.jpg" alt="Photo of hotel 1" class="gallery__photo">
+                        </figure>
+                        <figure class="gallery__item">
+                            <img src="img/hotel-2.jpg" alt="Photo of hotel 2" class="gallery__photo">
+                        </figure>
+                        <figure class="gallery__item">
+                            <img src="img/hotel-3.jpg" alt="Photo of hotel 3" class="gallery__photo">
+                        </figure>
+                    </div>
+                    <div class="overview">
+                        <h1 class="overview__heading">
+                            Vega Hotel Tbilisi
+                        </h1>
+                        <div class="overview__icon">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                        </div>
+                        <div class="overview__location">
+                            <i class="fas fa-map-marker-alt"></i>
+                            <a href="#" class="btn-inline">Tbilisi,Georgia</a>
+                        </div>
+                        <div class="overview__rating">
+                            <div class="overview__rating-average">8.3</div>
+                            <div class="overview__rating-count">342 votes</div>
+                        </div>
+                    </div>
                 </main>
             </div>
         </div>
