--- a/index.html
+++ b/index.html
@@ -108,6 +108,44 @@
                             <div class="overview__rating-count">342 votes</div>
                         </div>
                     </div>
+                    <div class="detail">
+                        <div class="description">
+                            <p class="paragraph">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Cupiditate enim expedita ratione consequuntur! Velit quae natus enim dolorem?
+                                Earum quidem obcaecati numquam provident sed excepturi ipsum harum, voluptatem architecto natus.
+                            </p>
+                            <p class="paragraph">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    Cupiditate enim expedita ratione consequuntur! Velit quae natus enim dolorem?
+                            </p>
+                            <ul class="list">
+                                <li class="list__item"> <i class="fas fa-chevron-right"></i> Close to the beach</li>
+                                <li class="list__item"> <i class="fas fa-chevron-right"></i> Free airport shuttle</li>
+                                <li class="list__item"> <i class="fas fa-chevron-right"></i> Pet allowed</li>
+                                <li class="list__item"> <i class="fas fa-chevron-right"></i> Free wifi in all rooms</li>
+                                <li class="list__item"> <i class="fas fa-chevron-right"></i> Air conditioner and heating</li>
+                                <li class="list__item"> <i class="fas fa-chevron-right"></i> Free breakfast</li>
+                                <li class="list__item"> <i class="fas fa-chevron-right"></i> We speak all languages</li>
+                                <li class="list__item"> <i class="fas fa-chevron-right"></i> Perfect for families</li>
+                            </ul>
+                            <div class="recommend">
+                                    <p class="recommend__count">
+                                        Aytac and 3 other friends recommend this hotel.
+                                    </p>
+                                    <div class="recommend__friends">
+                                        <img src="img/user-6.jpg" alt="Friend 1" class="recommend__photo">
+                                        <img src="img/user-4.jpg" alt="Friend 2" class="recommend__photo">
+                                        <img src="img/user-5.jpg" alt="Friend 3" class="recommend__photo">
+                                        <img src="img/user-3.jpg" alt="Friend 4" class="recommend__photo">
+                                    </div>
+                                </div>
+                        </div>
+                        
+                        <div class="user-review">
+                            User reviews
+                        </div>
+                    </div>
                 </main>
             </div>
         </div>
