--- a/index.html
+++ b/index.html
@@ -143,7 +143,37 @@
                         </div>
                         
                         <div class="user-review">
-                            User reviews
+                            <figure class="review">
+                                <blockquote class="review__text">
+                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                                    Laborum adipisci! Unde asperiores neque aperiam ipsa? Repellendus?
+                                </blockquote>
+                                <figcaption class="review__user">
+                                    <img src="img/user-1.jpg" alt="User 1" class="review__photo">
+                                    <div class="review__user-box">
+                                        <p class="review__user-name">Fuad Alakbar</p>
+                                        <p class="review__user-date">May 9th 2019</p>
+                                    </div>
+                                    <div class="review__user-rate">8.1</div>
+                                </figcaption>
+                            </figure>
+                            <figure class="review">
+                                <blockquote class="review__text">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    Nisi magnam totam itaque velit, ad veniam dolorem inventore porro blanditiis.
+                                </blockquote>
+                                <figcaption class="review__user">
+                                    <img src="img/user-2.jpg" alt="User 2" class="review__photo">
+                                    <div class="review__user-box">
+                                        <p class="review__user-name"> Janice Alton </p>
+                                        <p class="review__user-date">May 5th 2019</p>
+                                    </div>
+                                    <div class="review__user-rate">7.8</div>
+                                </figcaption>
+                            </figure>
+                            <div class="review__user-button">
+                                <a href="#" class="btn-inline">Show all &RightArrow;</a>
+                            </div>
                         </div>
                     </div>
                 </main>
