--- a/index.html
+++ b/index.html
@@ -176,6 +176,15 @@
                             </div>
                         </div>
                     </div>
+                    <div class="cta">
+                        <h2 class="cta__book-now">
+                            Good news ! We still have a free room for your selected dates !
+                        </h2>
+                        <button class="btn">
+                            <span class="btn__visible">Book now</span>
+                            <span class="btn__invisible">Only 4 rooms left</span>
+                        </button>
+                    </div>
                 </main>
             </div>
         </div>
