--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                     </div>
                     <div class="cta">
                         <h2 class="cta__book-now">
-                            Good news ! We still have a free room for your selected dates !
+                            Good news ! We still have a free rooms for your selected dates !
                         </h2>
                         <button class="btn">
                             <span class="btn__visible">Book now</span>
