adding media queries3

--- a/index.html
+++ b/index.html
@@ -45,29 +45,33 @@
                             <li class="side-nav__item side-nav__item-active">
                                 <a href="#" class="side-nav__link">
                                     <span class="side-nav__link-icon">
-                                        <i class="fas fa-hotel"></i> Hotel
+                                        <i class="fas fa-hotel"></i> 
                                     </span>
+                                    <span>Hotel</span>
                                 </a>
                             </li>
                             <li class="side-nav__item">
                                 <a href="#" class="side-nav__link">
                                     <span class="side-nav__link-icon">
-                                            <i class="fas fa-plane-departure"></i> Flight
+                                            <i class="fas fa-plane-departure"></i>
                                     </span>
+                                    <span>Flight</span>
                                 </a>
                             </li>
                             <li class="side-nav__item">
                                 <a href="#" class="side-nav__link">
                                     <span class="side-nav__link-icon">
-                                            <i class="fas fa-car"></i> Car rental
+                                            <i class="fas fa-car"></i>
                                     </span>
+                                    <span>Car Rental</span>
                                 </a>
                             </li>
                             <li class="side-nav__item">
                                 <a href="#" class="side-nav__link">
                                     <span class="side-nav__link-icon">
-                                        <i class="fas fa-map-marked-alt"></i> Tours
+                                        <i class="fas fa-map-marked-alt"></i>
                                     </span>
+                                    <span>Tours</span>
                                 </a>
                             </li>
                     
